add h1 tag in index.html

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <img src="images/tshirt_white.png">
                 </div>
             </div>
+            <h1>i love choclate</h1>
         </section>
     </header>
 
