add line 55 56 as h1 p1 tags

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                     <img src="images/tshirt_white.png">
                 </div>
             </div>
+            <h1>welcome to my website </h1>
+            <p>this website only for chooclate</p>
         </section>
     </header>
 
